import 'package:flutter/material.dart';

class Player {
  final int id;
  final Color color;

  Player({
    required this.id,
    required this.color,
  });
}
